fix: add small gap between checkbox elements

--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ input[type="email"] {
 
 fieldset {
     border: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 button[type="submit"] {
